--- a/public/index.html
+++ b/public/index.html
@@ -13,5 +13,18 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <!-- <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css"> -->
+    <!-- <script src="node_modules/semantic-ui-vue/dist/umd/semantic-ui-vue.min.js"></script>
+    <script>
+      Vue.use(SemanticUIVue);
+      var app = new Vue({
+        el: '#app',
+        data: {
+          message: 'Hello Vue!',
+        },
+        template:
+          '<span><sui-button primary>click me</sui-button>{{message}}</span>',
+      });
+    </script> -->
   </body>
 </html>
